# crewai-folder-layout

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
src/proj/: crew.py  main.py
