[project]
name = "proj"
version = "0.1.0"
description = "proj using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0"
]

[project.scripts]
proj = "proj.main:run"
run_crew = "proj.main:run"
train = "proj.main:train"
replay = "proj.main:replay"
test = "proj.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
